// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert should render 1`] = `
<div role="alert" class="Alert flex rounded-lg overflow-hidden Alert--status-warning Alert--size-default">
  <div class="Alert__icon Alert--padding w-24 flex items-center justify-center"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" class="w-8 h-8">
      <path d="M0 10C0 4.5 4.5 0 10 0s10 4.5 10 10-4.5 10-10 10S0 15.5 0 10zm2 0c0 4.4 3.6 8 8 8s8-3.6 8-8-3.6-8-8-8-8 3.6-8 8zm7 4c0-.6.4-1 1-1s1 .4 1 1-.4 1-1 1-1-.4-1-1zm0-3V6c0-.6.4-1 1-1s1 .4 1 1v5c0 .6-.4 1-1 1s-1-.4-1-1z" fill="currentColor"></path>
    </svg></div>
  <div class="Alert__content Alert--padding flex-1">
    <!---->
  </div>
</div>
`;

exports[`Alert should render with title 1`] = `
<div role="alert" class="Alert flex rounded-lg overflow-hidden Alert--status-warning Alert--size-default">
  <div class="Alert__icon Alert--padding w-24 flex items-center justify-center"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" class="w-8 h-8">
      <path d="M0 10C0 4.5 4.5 0 10 0s10 4.5 10 10-4.5 10-10 10S0 15.5 0 10zm2 0c0 4.4 3.6 8 8 8s8-3.6 8-8-3.6-8-8-8-8 3.6-8 8zm7 4c0-.6.4-1 1-1s1 .4 1 1-.4 1-1 1-1-.4-1-1zm0-3V6c0-.6.4-1 1-1s1 .4 1 1v5c0 .6-.4 1-1 1s-1-.4-1-1z" fill="currentColor"></path>
    </svg></div>
  <div class="Alert__content Alert--padding flex-1">
    <p data-testid="Alert__title" class="Alert__content__title">
      Test
    </p>
  </div>
</div>
`;
